--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
 deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
-    python -m pip install feast~0.27
+    python -m pip install feast~=0.27
     python -m pip install .
     
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
