--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ commands =
 deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
     python -m pip install .
     
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
@@ -35,6 +37,8 @@ deps =
     pytest-cov
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
     python -m pip install .
 
     python -m pytest --cov-report term --cov merlin -rxs tests/unit
