Nvt local runtime (#249)
* adds nvt local runtime support

* add to and from df functionality to dictarray

* fix for to and from df functions

* readd inner array detection logic and add cupy logic also

* fix cpu side list comprehension and translation from df to dict array

* refactor using nvt workflow transform df api

* refactor dict array df support

* update tox to pull in nvt and models

* working refactor of dictarray and triton processing

* try fix for invocation error in tox

* commenting out test where invocation error occurs

* put back on fall back timing for triton startup

Co-authored-by: Karl Higley <kmhigley@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,9 @@ commands =
 deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
     
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
@@ -34,10 +37,13 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
 
-    python -m pytest --cov-report term --cov merlin -rxs tests/unit
+    python -m pytest -rxs tests/unit
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
