update tox ini for  use of env var for cuda memory allocation

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
 
-    python -m pytest -rxs tests/unit
+    TF_GPU_ALLOCATOR=cuda_malloc_async python -m pytest -rxs tests/unit
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
