--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,8 @@ commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
 
-    TF_GPU_ALLOCATOR=cuda_malloc_async python -m pytest -rxs tests/unit
+    export TF_GPU_ALLOCATOR=cuda_malloc_async 
+    python -m pytest -rxs tests/unit
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
