--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,11 +1,14 @@
 name: lint
 
 on:
-  pull_request:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches: [ main ]
     tags:
       - v*
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened]
 
 jobs:
   pre-commit:
