--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,39 @@
 repos:
-      - repo: https://github.com/timothycrosley/isort
-        rev: 5.11.2
-        hooks:
-        - id: isort
-          additional_dependencies: [toml]
-          exclude: examples/.*
-      - repo: https://github.com/python/black
-        rev: 22.12.0
-        hooks:
-        - id: black
-      - repo: https://github.com/pycqa/flake8
-        rev: 6.0.0
-        hooks:
-        - id: flake8
-      - repo: https://github.com/pycqa/pylint
-        rev: v2.15.8
-        hooks:
-        - id: pylint
-      - repo: https://github.com/econchick/interrogate
-        rev: 1.5.0
-        hooks:
-        - id: interrogate
-          exclude: ^(docs|tests|setup.py|versioneer.py)
-          args: [--config=pyproject.toml]
-      - repo: https://github.com/codespell-project/codespell
-        rev: v2.2.2
-        hooks:
-        - id: codespell
-      - repo: https://github.com/PyCQA/bandit
-        rev: 1.7.4
-        hooks:
-        - id: bandit
-          args: [--verbose, -ll, -x, tests,examples,bench]
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.11.2
+    hooks:
+      - id: isort
+        additional_dependencies: [toml]
+        exclude: examples/.*
+  - repo: https://github.com/python/black
+    rev: 22.12.0
+    hooks:
+      - id: black
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+  - repo: https://github.com/pycqa/pylint
+    rev: v2.15.8
+    hooks:
+      - id: pylint
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
+    hooks:
+      - id: prettier
+        types_or: [yaml, markdown]
+  - repo: https://github.com/econchick/interrogate
+    rev: 1.5.0
+    hooks:
+      - id: interrogate
+        exclude: ^(docs|tests|setup.py|versioneer.py)
+        args: [--config=pyproject.toml]
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.2
+    hooks:
+      - id: codespell
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.4
+    hooks:
+      - id: bandit
+        args: [--verbose, -ll, -x, tests, examples, bench]
