--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,11 +3,11 @@ name: lint
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [main]
     tags:
       - v*
   pull_request:
-    branches: [ main ]
+    branches: [main]
     types: [opened, synchronize, reopened]
 
 jobs:
@@ -16,4 +16,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
       - uses: pre-commit/action@v3.0.0
