Set up pre- and post-merge CI test runs

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
 markers =
-    notebook: mark a test as testing notebooks
-    version: mark a test as testing the version number
+    notebook: mark as testing notebooks
+    version: mark as testing the version number
+    premerge: mark as running only before a PR is merged
+    postmerge: mark as running only after a PR is merged
+
