--- a/.github/workflows/postmerge-gpu.yml
+++ b/.github/workflows/postmerge-gpu.yml
@@ -1,13 +1,14 @@
-name: GPU CI
+name: GPU CI (Post-merge)
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches: [main]
-    types: [opened, synchronize, reopened]
+    tags:
+      - v*
 
 jobs:
-  gpu-ci-premerge:
+  cpu-ci-postmerge:
     runs-on: 1GPU
 
     steps:
@@ -23,4 +24,4 @@ jobs:
             raw=$(git branch -r --contains ${{ github.ref_name }})
             branch=${raw/origin\/}
           fi
-          cd ${{ github.workspace }}; tox -e test-gpu -- $branch
+          cd ${{ github.workspace }}; tox -e test-gpu-postmerge -- $branch
