--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,25 @@ deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
+    python -m pytest -rxs -m "premerge" tests/
+
+[testenv:test-cpu-postmerge]
+; Runs in: Github Actions
+; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
+; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
+deps = -rrequirements/test-cpu.txt
+commands =
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
+    python -m pip install .
+    python -m pytest -rxs -m "postmerge" tests/
+    python -m pytest -rxs tests/integration
 
 [testenv:test-gpu]
 sitepackages=true
@@ -43,6 +58,30 @@ commands =
     python -m pip install .
 
     python -m pytest -rxs tests/unit
+    python -m pytest -rxs -m "premerge" tests/
+
+[testenv:test-gpu-postmerge]
+sitepackages=true
+; Runs in: Internal Jenkins
+; Runs GPU-based tests.
+; The jenkins jobs run on an image based on merlin-hugectr. This will include all cudf configuration
+; and other gpu-specific libraries that we can enxpect will always exist. Thus, we don't need
+; to install requirements.txt yet. As we get better at python environment isolation, we will
+; need to add some back.
+setenv = 
+    TF_GPU_ALLOCATOR=cuda_malloc_async
+deps =
+    pytest
+    pytest-cov
+commands =
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
+    python -m pip install .
+
+    python -m pytest -rxs -m "postmerge" tests/
+    python -m pytest -rxs tests/integration
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
