--- a/.github/workflows/postmerge-cpu.yml
+++ b/.github/workflows/postmerge-cpu.yml
@@ -74,7 +74,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [build]
+    needs: [cpu-ci-postmerge]
     steps:
       - uses: actions/download-artifact@v2
         with:
