--- a/.github/workflows/docs-preview-pr.yaml
+++ b/.github/workflows/docs-preview-pr.yaml
@@ -5,6 +5,10 @@ on:
     workflows: [CPU CI]
     types: [completed]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   WF_ID: ${{ github.event.workflow_run.id }}
 
