--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -1,9 +1,15 @@
 name: Send Slack Notification
 
+# on:
+#   workflow_run:
+#     workflows: ["CPU CI", "lint"]
+#     types: [completed]
+
 on:
-  workflow_run:
-    workflows: ["CPU CI", "lint"]
-    types: [completed]
+  workflow_dispatch:
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize, reopened]
 
 jobs:
   slack-notify:
