--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -1,15 +1,13 @@
 name: Send Slack Notification
 
-# on:
-#   workflow_run:
-#     workflows: ["CPU CI", "lint"]
-#     types: [completed]
-
 on:
   workflow_dispatch:
-  pull_request:
-    branches: [main]
-    types: [opened, synchronize, reopened]
+  # pull_request:
+  #   branches: [main]
+  #   types: [opened, synchronize, reopened]
+  workflow_run:
+    workflows: ["CPU CI", "lint"]
+    types: [completed]
 
 jobs:
   slack-notify:
