--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -6,7 +6,7 @@ on:
   #   branches: [main]
   #   types: [opened, synchronize, reopened]
   workflow_run:
-    workflows: ["CPU CI", "lint (3.8)"]
+    workflows: ["lint"]
     types: [completed]
 
 jobs:
