--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,3 +26,19 @@ jobs:
         with:
           python-version: "3.8"
       - uses: pre-commit/action@v3.0.0
+
+      - name: Notify in Slack
+        id: slack
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          # This data can be any valid JSON from a previous step in the GitHub Action
+          payload: |
+            {
+              "key": "value",
+              "id": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "event": "${{ github.event.workflow_run.event }}",
+              "conclusion": "${{github.event.workflow_run.conclusion}}"
+            }
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
