--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -1,30 +1,30 @@
-name: Send Slack Notification
+# name: Send Slack Notification
 
-on:
-  workflow_dispatch:
-  # pull_request:
-  #   branches: [main]
-  #   types: [opened, synchronize, reopened]
-  workflow_run:
-    workflows: ["lint"]
-    types: [completed]
+# on:
+#   workflow_dispatch:
+#   # pull_request:
+#   #   branches: [main]
+#   #   types: [opened, synchronize, reopened]
+#   workflow_run:
+#     workflows: ["lint"]
+#     types: [completed]
 
-jobs:
-  slack-notify:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Notify in Slack
-        id: slack
-        uses: slackapi/slack-github-action@v1.23.0
-        with:
-          # This data can be any valid JSON from a previous step in the GitHub Action
-          payload: |
-            {
-              "key": "value",
-              "id": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
-              "event": "${{ github.event.workflow_run.event }}",
-              "conclusion": "${{github.event.workflow_run.conclusion}}"
-            }
-        env:
-          PR_NUMBER: ${{ github.event.number }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+# jobs:
+#   slack-notify:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Notify in Slack
+#         id: slack
+#         uses: slackapi/slack-github-action@v1.23.0
+#         with:
+#           # This data can be any valid JSON from a previous step in the GitHub Action
+#           payload: |
+#             {
+#               "key": "value",
+#               "id": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+#               "event": "${{ github.event.workflow_run.event }}",
+#               "conclusion": "${{github.event.workflow_run.conclusion}}"
+#             }
+#         env:
+#           PR_NUMBER: ${{ github.event.number }}
+#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
