--- a/.github/workflows/postmerge-cpu.yml
+++ b/.github/workflows/postmerge-cpu.yml
@@ -30,15 +30,12 @@ jobs:
       - name: Install and upgrade python packages
         run: |
           python -m pip install --upgrade pip setuptools==59.4.0 wheel tox
+      - name: Get Branch name
+        id: get-branch-name
+        uses: NVIDIA-Merlin/.github/actions/branch-name@main
       - name: Run tests
         run: |
-          ref_type=${{ github.ref_type }}
-          branch=main
-          if [[ $ref_type == "tag"* ]]
-          then
-            raw=$(git branch -r --contains ${{ github.ref_name }})
-            branch=${raw/origin\/}
-          fi
+          branch="${{ steps.get-branch-name.outputs.branch }}"
           tox -e test-cpu-postmerge -- $branch
       - name: Building docs
         run: |
