--- a/conda/recipes/meta.yaml
+++ b/conda/recipes/meta.yaml
@@ -6,7 +6,6 @@
 {% set version = environ.get('GIT_DESCRIBE_TAG', '0.1').lstrip('v') + environ.get('VERSION_SUFFIX', '') %}
 {% set minor_version = version.split('.')[0] + '.' + version.split('.')[1] %}
 {% set git_revision_count=environ.get('GIT_DESCRIBE_NUMBER', 0) %}
-{% set py_version=environ.get('CONDA_PY', 36) %}
 {% set setup_py_data = load_setup_py_data() %}
 
 package:
@@ -18,6 +17,7 @@ source:
 
 build:
   number: {{ git_revision_count }}
+  noarch: python
   script: python -m pip install . -vvv
 
 requirements:
