--- a/conda/recipes/meta.yaml
+++ b/conda/recipes/meta.yaml
@@ -1,10 +1,9 @@
-# Copyright (c) 2021, NVIDIA CORPORATION.
+# Copyright (c) 2023, NVIDIA CORPORATION.
 
 # Usage:
 #   conda build . -c defaults -c conda-forge -c numba -c rapidsai
 
 {% set version = environ.get('GIT_DESCRIBE_TAG', '0.1').lstrip('v') + environ.get('VERSION_SUFFIX', '') %}
-{% set minor_version = version.split('.')[0] + '.' + version.split('.')[1] %}
 {% set git_revision_count=environ.get('GIT_DESCRIBE_NUMBER', 0) %}
 {% set setup_py_data = load_setup_py_data() %}
 
@@ -21,6 +20,9 @@ build:
   script: python -m pip install . -vvv
 
 requirements:
+  build:
+    - python
+    - setuptools
   run:
     - python
     {% for req in setup_py_data.get('install_requires', []) %}
