--- a/.github/workflows/packages.yaml
+++ b/.github/workflows/packages.yaml
@@ -93,6 +93,7 @@ jobs:
   release-conda:
     name: Release Conda Package
     runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
     needs: [build-conda]
     steps:
       - uses: actions/setup-python@v2
