--- a/.github/workflows/packages.yaml
+++ b/.github/workflows/packages.yaml
@@ -88,7 +88,7 @@ jobs:
   release-conda:
     name: Release Conda Package
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    # if: "startsWith(github.ref, 'refs/tags/')"
     needs: [build-conda]
     steps:
       - uses: actions/setup-python@v2
