update tox to install correct versions of packages for tests regardless what is on the system

--- a/tox.ini
+++ b/tox.ini
@@ -48,6 +48,7 @@ sitepackages=true
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
 deps =
+    -rrequirements/test-gpu.txt
     pytest
     pytest-cov
 commands =
