--- a/tox.ini
+++ b/tox.ini
@@ -80,6 +80,7 @@ commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/Transformers4Rec.git@{posargs:main}
     python -m pip install .
 
     python -m pytest -rxs -m "postmerge" tests/
