--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
+    LD_LIBRARY_PATH=/opt/tritonserver/backends/pytorch
 passenv =
     OPAL_PREFIX
 deps =
@@ -85,7 +86,7 @@ commands =
     python -m pip install .
 
     python -m pytest -rxs -m "postmerge" tests/
-    LD_LIBRARY_PATH="/opt/tritonserver/backends/pytorch:$LD_LIBRARY_PATH" python -m pytest -rxs tests/integration
+    python -m pytest -rxs tests/integration
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
