Possible fix for post merge issues with container

--- a/tox.ini
+++ b/tox.ini
@@ -73,9 +73,9 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
-    LD_LIBRARY_PATH=/opt/tritonserver/backends/pytorch
 passenv =
     OPAL_PREFIX
+    LD_LIBRARY_PATH
 deps =
     pytest
     pytest-cov
