Extend LD_LIBRARY_PATH with pytorch backend path

--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,7 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
-    LD_LIBRARY_PATH=/opt/tritonserver/backends/pytorch
+    LD_LIBRARY_PATH=/opt/tritonserver/backends/pytorch:{env:LD_LIBRARY_PATH}
 passenv =
     OPAL_PREFIX
 deps =
